# revise-badvcomp

./: .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js
.github/workflows/: ci.yml
client/: package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json
client/public/: favicon.ico:Zone.Identifier
client/src/app/: layout.tsx  page.tsx
client/src/app/units/: page.tsx
client/src/app/units/[unitCode]/: page.tsx
client/src/components/: generator.tsx  report-dialog.tsx
client/src/config/: site.ts
client/src/lib/: actions.ts
client/src/types/: units.ts
contributions/: math1061-complex-arithmetic.cpp  unit0000-example.c
docker/: Dockerfile
server/: Cargo.toml  test.py  test1.py
server/src/: cli.rs  constants.rs  handler.rs  lib.rs  logger.rs  main.rs  route.rs  types.rs
server/src/elec1601/: 01-base_encoding.rs  02-fixed_point_numbers.rs  03-memory_size.rs  04-registers.rs  05-stack.rs  06-avr.rs  mod.rs
server/src/math1061_1002/: 01-complex_numbers.rs  mod.rs
server/src/math1061_1021/: mod.rs
src/app/: layout.tsx  page.tsx
src/app/units/: page.tsx
src/app/units/[unitCode]/: page.tsx
src/components/: main-nav.tsx
src/config/: site.ts
src/lib/: utils.ts
src/server/: Cargo.toml
src/server/src/: main.rs  types.rs
src/server/src/elec1601/: mod.rs
src/styles/: globals.css
src/types/: index.d.ts
