[package]
name = "revise-badvcomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
clap = { version = "4.4.18", features = ["derive", "env"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["json", "ansi"], default-features = false }
anyhow = "1.0.79"
rand = "0.8.5"
once_cell = "1.19.0"
maplit = "1.0.2"
tower-http = { version = "0.5.1", features = ["cors"] }
num-complex = "0.4.5"
